Filled out the about me. Arranged the work section into proper organization, filled in the resume section with a readable screenshot of my resume. Corrected the telephone link so it can properly call out. Corrected the email link so it can properly email out.

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -159,6 +159,24 @@ html {
   border-radius: 6px;
 }
 
+#resume {
+  display: flex;
+  flex-wrap: wrap;
+}
+.resume #page1{
+  margin-left:12%;
+}
+.resume #page2{
+  margin-left: 5%
+}
+.resume #page3 {
+  margin-left: 32%;
+}
+.resume img {
+  max-width: 700px;
+  max-height: 700px;
+}
+
 #resume-header{
   font-family: "Droid Sans", sans-serif;
   color: rgb(226, 191, 145);
@@ -178,6 +196,18 @@ html {
 }
 
 
+
+.work {
+  background: #603200;
+  background: -moz-linear-gradient(left, #603200 0%, #190C00 88%, #2B1212 100%);
+  background: -webkit-linear-gradient(left, #603200 0%, #190C00 88%, #2B1212 100%);
+  background: linear-gradient(to right, #603200 0%, #190C00 88%, #2B1212 100%);
+  border: groove;
+  border-color: #35240f;
+  border-width: 6px;
+  border-radius: 6px;
+}
+
 #work-header {
   font-family: "Droid Sans", sans-serif;
   color: rgb(226, 191, 145);
@@ -196,35 +226,23 @@ html {
   max-width: 100%;
 }
 
-.work {
-  background: #603200;
-  background: -moz-linear-gradient(left, #603200 0%, #190C00 88%, #2B1212 100%);
-  background: -webkit-linear-gradient(left, #603200 0%, #190C00 88%, #2B1212 100%);
-  background: linear-gradient(to right, #603200 0%, #190C00 88%, #2B1212 100%);
-  border: groove;
-  border-color: #35240f;
-  border-width: 6px;
-  border-radius: 6px;
-}
-
 .work img {
-  min-width: 35%;
-  min-height: 65%;
-  max-height:65%;
-  max-width: 35%;
+  min-width: 600px;
+  min-height: 400px;
+  max-height:400px;
+  max-width: 600px;
  
 }
 
-.position {
-  position: relative;
-  padding-top: 22px;
+#position {
+display: flex;
+flex-wrap: wrap;
 }
 
 .CSS {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  position: absolute;
+  position: relative;
+  margin-top: 1%;
+  margin-left: 10%;
 }
 
 
@@ -232,12 +250,13 @@ html {
   position: absolute;
   left: 50px;
   color: rgb(85, 55, 17);
-  text-align: center;
 }
 
 .javascript {
   Position: relative;
-
+  margin-top:3%;
+  margin-bottom: 1%;
+ margin-left: 33.5%
 }
 
 #javascript{
@@ -249,6 +268,8 @@ html {
 
 .html {
   position: relative;
+  margin-left: 13%;
+  margin-top: 1%;
 }
 
 #html {
